<resources>
    <string name="app_name">WeatherAppOnCity</string>
    <string name="welcome">Weather</string>
    <string name="cityName">Enter city name</string>
    <string name="buttonGo">Go</string>
    <string name="action_settings">Settings</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="powered_by_yahoo">Powered by Yahoo..!</string>
</resources>
