<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.raparthiss.weatherapponcity.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weatherIconImageView"
        android:src="@drawable/icon_na"
        android:contentDescription="@string/condition_icon"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/temperature"
        android:id="@+id/temperatureTextView"
        android:layout_below="@+id/weatherIconImageView"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/condition"
        android:id="@+id/conditionTextView"
        android:layout_below="@+id/temperatureTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location"
        android:id="@+id/locationTextView"
        android:layout_below="@+id/conditionTextView"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/yahoo_logo"
        android:id="@+id/imageView"
        android:contentDescription="@string/powered_by_yahoo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/welcomeText"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:textSize="36dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cityText"
        android:layout_below="@+id/welcomeText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:layout_alignRight="@+id/welcomeText"
        android:layout_alignEnd="@+id/welcomeText"
        android:hint="@string/cityName" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonGo"
        android:id="@+id/buttonGo"
        android:layout_alignBottom="@+id/cityText"
        android:layout_toRightOf="@+id/temperatureTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="refreshWeather" />
</RelativeLayout>
